# url_shortener_api

./: .restclient  README.md  pyproject.toml
app/: bdict.py  main.py
tests/: test_url_shortener.py
