[tool.poetry]
name = "url_shortener_api"
version = "0.1.0"
description = "API for shortening URLs"
authors = ["Søren Aagaard Mikkelsen <soren@aamikkelsen.dk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
isort = {version = "^5.10.1", optional = true}
black = {version = "^22.1.0", optional = true}
pyflakes = {version = "^2.4.0", optional = true}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
